# CM-Lab5

./: CMakeLists.txt  app.ui  input.txt
include/: file_parser.hpp  interpolation_calc.hpp  mainwindow.hpp  table_event_handler.hpp  ui_mainwindow.hpp
src/: main.cpp  mainwindow.cpp
